[fix]: overflow, background color for widget

--- a/styles/controls.module.scss
+++ b/styles/controls.module.scss
@@ -420,7 +420,7 @@
   height: fit-content;
   font-size: 14px;
   color: #fff;
-  background-color: #0F0F0F;
+  background-color: #00000080;
   padding: 5px 4px;
   border-radius: 4px;
   display: inline-flex;
